Added support to capture and report Karma. Added support to retry a request to get the JSON from reddit.